# safecpp

./: CMakeLists.txt  LICENSE  readme.md
src/demo/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  assert.hpp  common_operators.hpp  index_ref.hpp  memory.cpp  memory.hpp  mut.hpp  mutable_ref.hpp  owner.hpp  ptr.hpp  ranged.hpp  readonly_ref.hpp  ref.hpp  ref_counter.hpp  returnof.hpp  safe.hpp  safe.ixx  var.hpp
